--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
   --primary-background-color: #f5f5f5;
-  --secondary-background-color: #2f303a;
   --detail-color: #2f303a;
   --extra-color: #f5f4fa;
   --extra-two-color: #eeeeee;
@@ -129,6 +128,7 @@ ul {
   display: flex;
   margin-left: auto;
   gap: 50px;
+  fill: currentColor;
 }
 
 .site-nav .link {
@@ -140,10 +140,10 @@ ul {
 
 .contact-link-item {
   display: flex;
+  align-items: center;
   letter-spacing: 0.02;
   font-weight: 500;
   line-height: 1.14;
-  color: var (--title-text-color);
 }
 
 .site-nav .link-current {
@@ -251,7 +251,7 @@ ul {
   margin-bottom: 30px;
   display: flex;
   justify-content: center;
-  padding: 25px 100px;
+  align-items: center;
   width: 270px;
   height: 120px;
 }
@@ -289,6 +289,7 @@ ul {
 
 .team-item {
   padding-top: 30px;
+  margin-bottom: 30px;
 }
 
 .team-box {
@@ -329,7 +330,6 @@ ul {
 .team-soc-item {
   width: 44px;
   height: 44px;
-  margin-bottom: 30px;
 }
 
 .team-soc-link {
@@ -495,9 +495,9 @@ ul {
 /* Footer */
 
 .page-footer {
+  display: flex;
   background-color: var(--detail-color);
   color: var(--primary-white-color);
-  padding-top: 60px;
   padding-bottom: 60px;
 }
 
@@ -567,7 +567,7 @@ ul {
   display: flex;
 }
 
-.footernav-container {
+.footernav {
   padding-right: 70px;
   padding-top: 60px;
   padding-bottom: 60px;
@@ -579,6 +579,7 @@ ul {
   line-height: 1.14;
   letter-spacing: 0.03em;
   margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .socialnet {
