--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,10 @@ ul {
 .adres {
   font-style: normal;
 }
+
+img {
+  display: block;
+}
 /* Header navigation */
 
 .page-header {
@@ -249,6 +253,7 @@ ul {
   background-repeat: 4px;
   background-color: var(--extra-color);
   margin-bottom: 30px;
+  border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -378,6 +383,7 @@ ul {
 .filters-list .filter-button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .filters-list {
@@ -399,15 +405,19 @@ ul {
   gap: 30px;
 }
 
-.examples-box {
-  box-sizing: border-box;
-  width: 370px;
-  height: 404px;
-  border: 1px solid var(--extra-two-color);
+.examples-box:hover,
+.examples-box:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .examples-item {
+  padding-top: 20px;
+  padding-bottom: 20px;
   padding-left: 24px;
+  border-top: 0px;
+  border: 1px solid var(--extra-two-color);
+  border-top: 0;
 }
 
 .project-name {
@@ -416,8 +426,6 @@ ul {
   font-weight: 700;
   line-height: 2;
   letter-spacing: 0.06em;
-  margin-top: 20px;
-  margin-bottom: 4px;
 }
 .project-type {
   color: var(--title-text-color);
@@ -426,7 +434,6 @@ ul {
   line-height: 1.87;
   letter-spacing: 0.03em;
   margin-top: 0px;
-  margin-bottom: 20px;
 }
 
 /* Section Production */
