--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
   --extra-color: #f5f4fa;
   --extra-two-color: #eeeeee;
   --soc-color: #afb1b8;
+  --transition-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --ta: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -89,6 +91,32 @@ img {
 .icon-header {
   margin-right: 10px;
 }
+/* próba */
+
+/* .header-link {
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  transition: color var(--transition-animation);
+} */
+
+/* .hl {
+  display: flex;
+  position: relative;
+}
+
+.hl::before {
+  content: '';
+  position: absolute;
+  bottom: -150%;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  transition: color var(--ta);
+} */
+
+/* próba  */
 
 .contact-link-item:hover,
 .contact-link-item:focus {
@@ -135,14 +163,13 @@ img {
   fill: currentColor;
 }
 
-.site-nav .link {
+.site-nav .header-link {
   color: var(--primary-text-color);
   letter-spacing: 0.02em;
   font-weight: 500;
   line-height: 1.14;
 }
-
-.contact-link-item {
+s .contact-link-item {
   display: flex;
   align-items: center;
   letter-spacing: 0.02;
@@ -154,8 +181,8 @@ img {
   color: var(--accent-color);
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav .header-link:hover,
+.site-nav .header-link:focus {
   color: var(--accent-color);
 }
 
@@ -405,8 +432,12 @@ img {
   gap: 30px;
 }
 
-.examples-box:hover,
-.examples-box:focus {
+.examples-link {
+  display: block;
+}
+
+.examples-link:hover,
+.examples-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -519,7 +550,7 @@ img {
   color: var(--primary-white-color);
 }
 
-.link {
+.footer-link {
   font-style: normal;
 }
 
@@ -530,18 +561,18 @@ img {
   line-height: 1.71;
 }
 
-.link .mail-link-footer,
-.link .tel-link-footer {
+.footer-link .mail-link-footer,
+.footer-link .tel-link-footer {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.link .mail-link-footer:hover,
-.link .mail-link-footer:focus {
+.footer-link .mail-link-footer:hover,
+.footer-link .mail-link-footer:focus {
   color: var(--accent-color);
 }
 
-.link .tel-link-footer:hover,
-.link .tel-link-footer:focus {
+.footer-link .tel-link-footer:hover,
+.footer-link .tel-link-footer:focus {
   color: var(--accent-color);
 }
 
